--- a/essentials/code.mdx
+++ b/essentials/code.mdx
@@ -1,37 +1,25 @@
 ---
-title: 'Code Blocks'
-description: 'Display inline code and code blocks'
-icon: 'code'
+title: Code
+description: 'Documentation for code'
 ---
 
-## Basic
+# Code
 
-### Inline Code
+This is a placeholder page for essentials/code. Replace this content with your actual documentation.
 
-To denote a `word` or `phrase` as code, enclose it in backticks (`).
-
-```
-To denote a `word` or `phrase` as code, enclose it in backticks (`).
-```
-
-### Code Block
-
-Use [fenced code blocks](https://www.markdownguide.org/extended-syntax/#fenced-code-blocks) by enclosing code in three backticks and follow the leading ticks with the programming language of your snippet to get syntax highlighting. Optionally, you can also write the name of your code after the programming language.
-
-```java HelloWorld.java
-class HelloWorld {
-    public static void main(String[] args) {
-        System.out.println("Hello, World!");
-    }
-}
-```
-
-````md
-```java HelloWorld.java
-class HelloWorld {
-    public static void main(String[] args) {
-        System.out.println("Hello, World!");
-    }
-}
-```
-````
+<CardGroup cols={2}>
+  <Card
+    title="Learn More"
+    icon="book"
+    href="/introduction"
+  >
+    Go back to introduction
+  </Card>
+  <Card
+    title="Next Page"
+    icon="arrow-right"
+    href="/quickstart"
+  >
+    Continue to quickstart
+  </Card>
+</CardGroup>
