--- a/api-reference/endpoint/create.mdx
+++ b/api-reference/endpoint/create.mdx
@@ -1,4 +1,25 @@
 ---
-title: 'Create Plant'
-openapi: 'POST /plants'
+title: Create
+description: 'Documentation for create'
 ---
+
+# Create
+
+This is a placeholder page for api-reference/endpoint/create. Replace this content with your actual documentation.
+
+<CardGroup cols={2}>
+  <Card
+    title="Learn More"
+    icon="book"
+    href="/introduction"
+  >
+    Go back to introduction
+  </Card>
+  <Card
+    title="Next Page"
+    icon="arrow-right"
+    href="/quickstart"
+  >
+    Continue to quickstart
+  </Card>
+</CardGroup>
