--- a/api-reference/endpoint/delete.mdx
+++ b/api-reference/endpoint/delete.mdx
@@ -1,4 +1,25 @@
 ---
-title: 'Delete Plant'
-openapi: 'DELETE /plants/{id}'
+title: Delete
+description: 'Documentation for delete'
 ---
+
+# Delete
+
+This is a placeholder page for api-reference/endpoint/delete. Replace this content with your actual documentation.
+
+<CardGroup cols={2}>
+  <Card
+    title="Learn More"
+    icon="book"
+    href="/introduction"
+  >
+    Go back to introduction
+  </Card>
+  <Card
+    title="Next Page"
+    icon="arrow-right"
+    href="/quickstart"
+  >
+    Continue to quickstart
+  </Card>
+</CardGroup>
